fix whitespace not found page

--- a/src/pages/NotFound/style.module.css
+++ b/src/pages/NotFound/style.module.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 .error404 {
   display: flex;
@@ -25,7 +26,7 @@
   display: flex;
   flex-direction: column;
   flex-basis: 60%;
-  justify-content: first baseline;
+  margin-bottom: 140px;
 }
 .text_wrapper > p {
   margin-top: 8px;
